notebooks/wandb/run-20230829_230109-gt7bhcam/files/output.log
2023-08-29 23:01:15.193108: E tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:268] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected
2023-08-29 23:01:15.193153: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:168] retrieving CUDA diagnostic information for host: hpc.research.local
2023-08-29 23:01:15.193162: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:175] hostname: hpc.research.local
2023-08-29 23:01:15.193361: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:199] libcuda reported version is: 495.29.5
2023-08-29 23:01:15.193389: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:203] kernel reported version is: 495.29.5
2023-08-29 23:01:15.193397: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:309] kernel version seems to match DSO: 495.29.5
wandb: ERROR Dropped streaming file chunk (see wandb/debug-internal.log)
[34m[1mwandb[39m[22m: [32m[41mERROR[39m[49m Error while calling W&B API: could not find agent 2gseegh7 during agentHeartbeat (<Response [404]>)
Exception in thread Thread-4 (_heartbeat):
Traceback (most recent call last):
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/site-packages/wandb/sdk/lib/retry.py", line 131, in __call__
    result = self._call_fn(*args, **kwargs)
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/site-packages/wandb/sdk/internal/internal_api.py", line 323, in execute
    return self.client.execute(*args, **kwargs)  # type: ignore
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/site-packages/wandb/vendor/gql-0.2.0/wandb_gql/client.py", line 52, in execute
    result = self._get_result(document, *args, **kwargs)
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/site-packages/wandb/vendor/gql-0.2.0/wandb_gql/client.py", line 60, in _get_result
    return self.transport.execute(document, *args, **kwargs)
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/site-packages/wandb/sdk/lib/gql_request.py", line 56, in execute
    request.raise_for_status()
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/site-packages/requests/models.py", line 1021, in raise_for_status
    raise HTTPError(http_error_msg, response=self)
requests.exceptions.HTTPError: 404 Client Error: Not Found for url: https://api.wandb.ai/graphql
During handling of the above exception, another exception occurred:
Traceback (most recent call last):
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/site-packages/wandb/sdk/internal/internal_api.py", line 2716, in agent_heartbeat
    response = self.gql(
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/site-packages/wandb/sdk/internal/internal_api.py", line 295, in gql
    ret = self._retry_gql(
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/site-packages/wandb/sdk/lib/retry.py", line 147, in __call__
    retry_timedelta_triggered = check_retry_fn(e)
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/site-packages/wandb/util.py", line 896, in no_retry_auth
    raise CommError(f"Permission denied to access {wandb.run.path}")
wandb.errors.CommError: Permission denied to access afanasyeva-team/NN-MATseq/gt7bhcam
During handling of the above exception, another exception occurred:
Traceback (most recent call last):
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/threading.py", line 1016, in _bootstrap_inner
    self.run()
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/threading.py", line 953, in run
    self._target(*self._args, **self._kwargs)
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/site-packages/wandb/agents/pyagent.py", line 166, in _heartbeat
    commands = self._api.agent_heartbeat(self._agent_id, {}, run_status)
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/site-packages/wandb/apis/internal.py", line 153, in agent_heartbeat
    return self.api.agent_heartbeat(*args, **kwargs)
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/site-packages/wandb/sdk/internal/internal_api.py", line 2727, in agent_heartbeat
    message = ast.literal_eval(e.args[0])["message"]
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/ast.py", line 64, in literal_eval
    node_or_string = parse(node_or_string.lstrip(" \t"), mode='eval')
  File "/home/t.afanasyeva/mambaforge/envs/MATseq/lib/python3.10/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    Permission denied to access afanasyeva-team/NN-MATseq/gt7bhcam
               ^^^^^^
SyntaxError: invalid syntax
wandb: ERROR Dropped streaming file chunk (see wandb/debug-internal.log)
wandb: ERROR Dropped streaming file chunk (see wandb/debug-internal.log)
wandb: ERROR Dropped streaming file chunk (see wandb/debug-internal.log)
wandb: ERROR Dropped streaming file chunk (see wandb/debug-internal.log)
